unpackaged/main/default/objects/wechat_sa_client__c/wechat_sa_client__c.object-meta.xml
<CustomObject>
    <label>WeChat SA Client</label>
    <nameField>
        <displayFormat>BIND-{00000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>WeChat SA Clients</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>