unpackaged/main/default/objects/wechat_sa_client__c/fields/Client__c.field-meta.xml
<CustomField>
    <fullName>Client__c</fullName>
    <label>Client</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>WeChat SA Clients</relationshipLabel>
    <relationshipName>WeChat_SA_Clients</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>