unpackaged/main/default/objects/wechat_sa_client__c/fields/Remarks_Mobile_1__c.field-meta.xml
<CustomField>
    <fullName>Remarks_Mobile_1__c</fullName>
    <label>Remarks Mobile 1</label>
    <type>Phone</type>
</CustomField>