unpackaged/main/default/objects/wechat_sa_client__c/fields/Remarks_Mobile_2__c.field-meta.xml
<CustomField>
    <fullName>Remarks_Mobile_2__c</fullName>
    <label>Remarks Mobile 2</label>
    <type>Phone</type>
</CustomField>