unpackaged/main/default/objects/wechat_sa_client__c/fields/Remarks_Mobile_3__c.field-meta.xml
<CustomField>
    <fullName>Remarks_Mobile_3__c</fullName>
    <label>Remarks Mobile 3</label>
    <type>Phone</type>
</CustomField>