unpackaged/main/default/objects/wechat_sa_client__c/fields/SA__c.field-meta.xml
<CustomField>
    <fullName>SA__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>SA</label>
    <referenceTo>User</referenceTo>
    <relationshipName>WeChat_SA_Clients</relationshipName>
    <type>Lookup</type>
</CustomField>